--- a/CSharpCalculator/MainWindow.xaml
+++ b/CSharpCalculator/MainWindow.xaml
@@ -36,19 +36,19 @@
         <Button x:Name="btn0" Grid.Row="5" Grid.Column="1" Click="btn0_Click">0</Button>
         
         <!--Maths Buttons-->
-        <Button x:Name="btnPlus" Grid.Row="1" Grid.Column="3">+</Button>
-        <Button x:Name="btnMinus" Grid.Row="2" Grid.Column="3">-</Button>
-        <Button x:Name="btnTimes" Grid.Row="3" Grid.Column="3">*</Button>
-        <Button x:Name="btnDivide" Grid.Row="4" Grid.Column="3">/</Button>
-        <Button x:Name="btnEquals" Grid.Row="5" Grid.Column="3">=</Button>
+        <Button x:Name="btnPlus" Grid.Row="1" Grid.Column="3" Click="btnPlus_Click">+</Button>
+        <Button x:Name="btnMinus" Grid.Row="2" Grid.Column="3" Click="btnMinus_Click">-</Button>
+        <Button x:Name="btnTimes" Grid.Row="3" Grid.Column="3" Click="btnTimes_Click">*</Button>
+        <Button x:Name="btnDivide" Grid.Row="4" Grid.Column="3" Click="btnDivide_Click">/</Button>
+        <Button x:Name="btnEquals" Grid.Row="5" Grid.Column="3" Click="btnEquals_Click">=</Button>
         
         <!--Clear Buttons-->
-        <Button x:Name="btnClearEntry" Grid.Row="1" Grid.Column="0">CE</Button>
-        <Button x:Name="btnClear" Grid.Row="1" Grid.Column="1">C</Button>
-        <Button x:Name="btnBackspace" Grid.Row="1" Grid.Column="2" Content="&lt;"></Button>
+        <Button x:Name="btnClearEntry" Grid.Row="1" Grid.Column="0" Click="btnClearEntry_Click">CE</Button>
+        <Button x:Name="btnClear" Grid.Row="1" Grid.Column="1" Click="btnClear_Click">C</Button>
+        <Button x:Name="btnBackspace" Grid.Row="1" Grid.Column="2" Content="&lt;=" Click="btnBackspace_Click"></Button>
         
         <!--Positive and Negative Button-->
-        <Button x:Name="btnPositiveNegative" Grid.Row="5" Grid.Column="0">+-</Button>
+        <Button x:Name="btnPositiveNegative" Grid.Row="5" Grid.Column="0" Click="btnPositiveNegative_Click">+-</Button>
         
         <!--Display Text Box-->
         <TextBlock x:Name="txtDisplay" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="30" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">0</TextBlock>
